# plainspeak

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  README.md  commit_message.txt  feature_requests.md  index.html  package.json  plainspeak.spec  plan-tracking.md  pyproject.toml  pytest.ini  pytest_debug.ini  sample-queries.md  sample.csv  sample.json  test_llm.py
.github/: docs.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: asset-request.md  binary-release.md  store-listings.md  test-submission.yml
.github/workflows/: binary-tests.yml  build-binaries.yml  ci.yml  create-test-issue.yml  deploy-docs.yml  deploy-pages.yml  deploy-pages.yml.disabled  execute-test-workflow.yml  generate-assets.yml  pages.yml  submit-packages.yml  test-assets.yml  test-sample-package.yml  test-submissions.yml
assets/: ASSETS_STRUCTURE.txt  COLOR_SCHEME.txt  CONTRIBUTING.md  DIRECTORY_SETUP.txt  ICON_PLACEHOLDER.txt  README-ASSETS.txt  README.md  THEME.txt  TYPOGRAPHY.txt  VERSION.txt
assets/brand/: VOICE_AND_TONE.txt
assets/brand/colors/: README.md  accessibility_guide.md  color_palette.css
assets/icons/macos/: plainspeak.icns
changelog/2023/: may-week3.md
changelog/2024/: 05-3.md  05-4.md  06-1.md  07-5.md  08-2.md  july-week4.md
changelog/tracking/: 2024-06-07-tokenizers-fix.md  doc-implementation.md
docs/: README.md  plugin-contest.md
docs/dev_docs/architecture/: overview.md  psf-governance-model.md  psf-proposal-technical-spec.md  psf-proposal.md  psf-working-group-charter.md  psf-working-group-governance.md
docs/dev_docs/plugins/: advanced_plugin_tutorial.md  creating_plugins.md  development.md  verb_matching.md  verb_matching_implementation.md
docs/legal/: data-usage-agreement.md  eula.md  privacy-policy.md  terms-of-service.md
docs/release/: codesigning.md  developer-accounts.md  distribution.md
docs/sphinx/source/: conf.py  index.rst
docs/store/: SUBMISSION_CHECKLIST.md  apple-store-listing.md  microsoft-store-listing.md  pypi-listing.md
docs/user_docs/faq/: advanced_usage.md  troubleshooting.md
docs/user_docs/getting_started/: first_session.md
docs/user_docs/guides/: examples.md  how_it_works.md
docs/user_docs/installation/: index.md  linux.md  macos.md  windows.md
docs/user_docs/plugins/: file.md  git.md  network.md  overview.md  system.md  text.md
docs/website/api/: contest.py  notifications.py
docs/website/contest/: index.html
docs/website/css/: main.css
docs/website/js/: main.js
docs/website/judging/: guide.md  recruitment.md
installers/macos/: Info.plist  entitlements.plist
installers/windows/: installer.iss
models/: .gitkeep
plainspeak/: ast.py  cli.py  config.py  context.py  learning.py  llm_interface.py  parser.py  prompts.py
plainspeak/cli/: __init__.py  commands.py  config_cmd.py  parser.py  plugins_cmd.py  shell_commands.py  shell_utils.py  translate_cmd.py  utils.py
plainspeak/cli/handlers/: translate_handlers.py
plainspeak/core/: commander.py  i18n.py  llm.py  parser.py  session.py
plainspeak/core/llm/: base.py  local.py  remote.py
plainspeak/plugins/: README.md  __init__.py  base.py  calendar.py  email.py  file.py  git.py  git.yaml  manager.py  network.py  platform.py  sandbox.py  schemas.py  system.py  text.py
plainspeak/plugins/dataspeak/: README.md  __init__.py  connection.py  export.py  util.py  (+3 more)
plainspeak/translations/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  pt_BR.json
scripts/: README-PACKAGING.md  README-TEST-AUTOMATION.md  README-TEST-SUBMISSION.md  README-VERIFICATION.md  README.md  check_file_length.py  create_test_issue.py  ensure_asset_dirs.py  execute_test_automation.py  generate_assets.py  generate_icons.py  install_pls.ps1  install_pls.sh  parse_test_results.py  pls  requirements-assets.txt  requirements-packaging.txt  requirements-test-submission.txt  run-full-test.sh  run_test_workflow.sh  run_tests.sh  submit_packages.py  verify_builds.py
templates/plugin-template/: README.md  plugin.py  plugin.yaml
tests/: README.md  __init__.py  conftest.py  requirements-tests.txt  test_assets.py  test_binary_compat.py  test_cli.py  test_cli_compat.py  test_config.py  test_config.yaml  test_context.py  test_end_to_end.py  test_end_to_end_compat.py  test_i18n.py  test_integration.py  test_integration_compat.py  test_learning.py  test_llm_interface.py  test_llm_interface_compat.py  test_parser.py  test_parser_compat.py  test_plugin_registry.py  test_plugin_registry_compat.py  test_plugin_verb_matching.py  test_plugin_verb_matching_compat.py  test_plugin_verb_matching_integration.py  test_plugin_verb_matching_integration_compat.py  test_plugins.py  test_prompts.py  test_prompts_compat.py  test_remote_llm.py
tests/binaries/: test_binary.py  test_plan.md
tests/test_cli/: conftest.py  test_main.py  test_shell.py  test_system_commands.py  test_translate_command.py
tests/test_core/: conftest.py  test_commander.py  test_llm_interface.py  test_parser.py  test_plugin_manager.py
tests/test_plugins/: __init__.py  test_dataspeak_compat.py  test_integration.py  test_yaml_plugin_compat.py
(+27 files in other folders)
