[tool.poetry]
name = "plainspeak"
version = "0.1.0"
description = "Turns everyday English into real terminal commands and API calls."
authors = ["plainspeak-org <contact@plainspeak.pro>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plainspeak-org/plainspeak"
keywords = ["nlp", "cli", "automation", "llm"]

[tool.poetry.dependencies]
python = "^3.9" # Specify a compatible Python version, e.g., 3.9+

cmd2 = "^2.4.3"
# ctransformers is a core dependency.
# For GPU support, users may need to install ctransformers with its CUDA extras
# (e.g., pip install ctransformers[cuda]) before installing plainspeak,
# or ensure their environment allows ctransformers to build with GPU support.
ctransformers = "^0.2.27"
jinja2 = "^3.1.3"
pydantic = "^2.5.3" # Using Pydantic v2
typer = {extras = ["all"], version = "^0.9.0"}
# python-dotenv = "^1.0.0" # For managing API keys if needed for remote LLMs

[tool.poetry.extras]
# The 'cuda' extra indicates that ctransformers is a key component for CUDA functionality.
# Users installing with this extra should be aware of ctransformers' GPU requirements.
cuda = ["ctransformers"]

[tool.poetry.scripts]
plainspeak = "plainspeak.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0" # For test coverage

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" # Whitespace before ':' - often conflicts with Black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# Add more mypy configurations as needed
# Example:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=plainspeak --cov-report=term-missing"
testpaths = [
    "tests",
]
